@@ -12,6 +12,9 @@
 	(mpz_set_str): Optimise-out a variable.
 	(mpz_import): Normalise only if needed.
 
+	* rand/randmts.c: Use init2, as size of variables is known in advance.
+	(mangle_seed): Get a single argument.
+
 2013-02-17  Marc Glisse  <marc.glisse@inria.fr>
 
 	* cxx/osdoprnti.cc: Use <stdarg.h> and <string.h> rather than <cstdarg>
